--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,33 @@
-body{
-	background: url("http://thiswallpaper.com/cdn/hdwallpapers/733/green%20mushroom%20high%20definition%20wallpaper.jpg") no-repeat center center fixed;
-	background-size: cover;
+body {
+    background: url("https://github.com/webbdm/Mushroom-Mania/blob/exercise/mushroom.jpg?raw=true") no-repeat center center fixed;
+    background-size: cover;
+}
+
+.container{
+	margin: 0 10%;
+	width: 85%;
+}
+
+.mushroomBox {
+    display: flex;
+    flex-flow: row wrap;
+    align-content: space-between;
+    color: black;
+    height: 700px;
+    width: 65%;
+    margin-top: 7%;
+    .list-options {
+        width: 100%;
+        .searchInput {
+            width: inherit;
+        }
+    }
+    .panel-box{
+    	overflow: scroll;
+    }
+    .panel {
+        background-color: rgba(40, 26, 26, 0.78);
+    }
+    h1 {}
+    p {}
 }
