--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,11 +1,13 @@
+$mushroom: 'Lakki Reddy', cursive;
+
 body {
     background: url("https://github.com/webbdm/Mushroom-Mania/blob/exercise/mushroom.jpg?raw=true") no-repeat center center fixed;
     background-size: cover;
 }
 
-.container{
-	margin: 0 10%;
-	width: 85%;
+.container {
+    margin: 0 10%;
+    width: 85%;
 }
 
 .mushroomBox {
@@ -15,19 +17,36 @@ body {
     color: black;
     height: 700px;
     width: 65%;
-    margin-top: 7%;
+    margin-top: 3%;
+    .title{
+    	padding: 0 20%;
+    	font-family: $mushroom;
+    	font-size: 50px;
+    }
+
     .list-options {
+    	padding: 0 15%;
+    	margin: 10px 0;
         width: 100%;
         .searchInput {
-            width: inherit;
+            width: 50%;
         }
     }
-    .panel-box{
-    	overflow: scroll;
+    .panel-box {
+        overflow: scroll;
     }
     .panel {
         background-color: rgba(40, 26, 26, 0.78);
+        padding: 0 1%;
     }
-    h1 {}
-    p {}
+
+    h2 {
+        font-size: 20px;
+        font-family: $mushroom;
+        color: white;
+        text-transform: capitalize;
+    }
+    p {
+    	color: green;
+    }
 }
