--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,5 @@
-$mushroom: 'Lakki Reddy', cursive;
-
+$mushroom: 'Lakki Reddy',
+cursive;
 body {
     background: url("https://github.com/webbdm/Mushroom-Mania/blob/exercise/mushroom.jpg?raw=true") no-repeat center center fixed;
     background-size: cover;
@@ -18,15 +18,14 @@ body {
     height: 700px;
     width: 65%;
     margin-top: 3%;
-    .title{
-    	padding: 0 20%;
-    	font-family: $mushroom;
-    	font-size: 50px;
+    .title {
+        padding: 0 20%;
+        font-family: $mushroom;
+        font-size: 50px;
     }
-
     .list-options {
-    	padding: 0 15%;
-    	margin: 10px 0;
+        padding: 0 15%;
+        margin: 10px 0;
         width: 100%;
         .searchInput {
             width: 50%;
@@ -39,7 +38,6 @@ body {
         background-color: rgba(40, 26, 26, 0.78);
         padding: 0 1%;
     }
-
     h2 {
         font-size: 20px;
         font-family: $mushroom;
@@ -47,6 +45,6 @@ body {
         text-transform: capitalize;
     }
     p {
-    	color: green;
+        color: green;
     }
 }
